# mihoro

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: cmd.rs  config.rs  cron.rs  init.rs  main.rs  mihoro.rs  proxy.rs  resolve_mihomo_bin.rs  systemctl.rs  ui.rs  utils.rs
