[package]
name = "mihoro"
description = "Mihomo CLI client on Linux."
version = "0.4.1"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["spencerwooo <spencer.woo@outlook.com>"]
homepage = "https://github.com/spencerwooo/mihoro"
repository = "https://github.com/spencerwooo/mihoro"
keywords = ["cli", "clash", "network", "linux", "mihomo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
flate2 = "1.0"
shellexpand = "3.1"
openssl = { version = "0.10", features = ["vendored"] }
serde_yaml = "0.9"
local-ip-address = "0.5"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
indicatif = "0.17"
tokio = { version = "1.34", features = ["full"] }
truncatable = "0.1"
anyhow = "1.0"
base64 = "0.22.1"
