[package]
name = "mihoro"
description = "Mihomo CLI client on Linux."
version = "0.6.0"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["spencerwooo <spencer.woo@outlook.com>"]
homepage = "https://github.com/spencerwooo/mihoro"
repository = "https://github.com/spencerwooo/mihoro"
keywords = ["cli", "clash", "network", "linux", "mihomo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
flate2 = "1.1"
shellexpand = "3.1"
openssl = { version = "0.10", features = ["vendored"] }
serde_yaml = "0.9"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
indicatif = "0.17"
tokio = { version = "1.44", features = ["full"] }
truncatable = "0.1"
anyhow = "1.0"
base64 = "0.22"
